# frustum-pointnets

./: .gitignore
kitti/: kitti_object.py  prepare_data.py
train/: test.py
train/kitti_eval/: CMakeLists.txt  evaluate_object_3d_offline.cpp  test_geteval_files.cpp
